--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,12 @@ inputs:
   repo-token:
     description: 'Must be able to read all members of organization'
     required: true
+  base:
+    description: 'Name of the destination branch'
+    required: true
+  branch:
+    description: 'Name of the source branch'
+    required: true
   title:
     description: 'Title of the pull request'
     required: true
@@ -12,12 +18,7 @@ inputs:
     required: false
   user-reviewers:
     description: 'List of comma-separated logins of users'
-  base:
-    description: 'Name of the destination branch'
-    required: true
-  branch:
-    description: 'Name of the source branch'
-    required: true
+    required: false
   labels:
     description: 'List of comma-separated label names. If one does not exist, it will be created'
     required: false
